dev(projects): some dates for project
